tests/TPTP/feener_CHAD_examples/1b_Obligation_polymorphic_NOTPOSSIBLE/error_msg.txt
% Running in auto input_syntax mode. Trying TPTP
% Failed with
% User error: Undeclared type constructor s__Bill/0 (detected at or around line 79)
% Trying SMTLIB2
User error: Unexpected end of list at line 1 col 2
%
^
